add about section

--- a/women-cosmetics/index.html
+++ b/women-cosmetics/index.html
@@ -6,7 +6,13 @@
     <meta name="description" content="Welcome to Women Secrets, your ultimate guide to fashion, beauty, and lifestyle. Stay ahead with the latest trends and tips!" />
     <title>Women Secrets</title>
     <link rel="preload" href="/assets/images/Logo.webp" as="image" />
+    <link rel="preload" href="/assets/images/image 25.webp" as="image" />
+    <link rel="preload" href="/assets/images/image 26.webp" as="image" />
     <link rel="stylesheet" href="@/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Alata&family=League+Spartan:wght@100..900&display=swap" as="font" type="font/woff2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
      <!--[if lt IE 9]>
       <script src="/assets/js/html5shiv.js"></script>
      <![endif]-->
