--- a/women-cosmetics/index.html
+++ b/women-cosmetics/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Welcome to Women Secrets, your ultimate guide to fashion, beauty, and lifestyle. Stay ahead with the latest trends and tips!" />
     <title>Women Secrets</title>
+    <link rel="preload" href="/assets/images/Logo.webp" as="image" />
+    <link rel="stylesheet" href="@/style.css" />
+     <!--[if lt IE 9]>
+      <script src="/assets/js/html5shiv.js"></script>
+     <![endif]-->
   </head>
   <body>
     <div id="app"></div>
